# backend/src/main/java/com/storagehub/entity/PolicyRuleType.java
@@ -1,0 +1,14 @@
+package com.storagehub.entity;
+
+/**
+ * policy_rules.RuleType ENUM ('DEPOSIT_RATE', 'RENT_RATE', 'LATE_FEE', 'SURCHARGE', 'TURNOVER_BUFFER', 'DISCOUNT', 'WAIVER_CAP')
+ */
+public enum PolicyRuleType {
+    DEPOSIT_RATE,
+    RENT_RATE,
+    LATE_FEE,
+    SURCHARGE,
+    TURNOVER_BUFFER,
+    DISCOUNT,
+    WAIVER_CAP
+}
